# cylvion

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/include/cylvion/: action.h  actor.h  card.h  content.h  defender.h  error.h  field.h  game.h  hand.h  intro.h  lib.h  log.h  observer.h  stack.h
core/src/: action.c  card.c  content.c  defender.c  field.c  game.c  hand.c  intro.c  lib.c  log.c  log_int.h  stack.c
demo/: CMakeLists.txt  demo.c
