CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
PROJECT(cylvion)

SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -ansi")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -Wall -Wextra")
SET(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

OPTION(CYLVION_BUILD_TESTS "Build tests for rummikub" OFF)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(demo)
